<resources>
    <string name="app_name">SafariTeacher</string>
    <string name="app_description">Made easy for any teacher to teach</string>

    <string name="title_home">Welcome to Safari Teachers</string>
    <string name="title_scannedLogs">View Scanned Logs</string>
    <string name="title_scannedLogsList">Scanned Logs</string>
    <string name="title_qrContent">Update Content of QR Codes</string>
    <string name="title_qrContentPage">Tap content to update</string>
    <string name="title_transMessage">Update Transition Messages</string>
    <string name="title_transMessageList">Tap message to update</string>
    <string name="title_helpAlerts">View Help Alerts</string>
    <string name="title_helpAlertsList">Help Alerts</string>
    <string name="title_settings">Update Settings</string>
    <string name="title_settingsPage">Tap setting to update</string>
    <string name="title_activity_settings">Settings</string>

</resources>
